--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
 @article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
+  title = {Integrated Cross-Scale Manipulation and Modulable Encapsulation of Cell-Laden Hydrogel for Constructing Tissue-Mimicking Microstructures},
+  author={Zhao Y, Dong X, Li Y, Cui J,Shi Q, Huang HW, Huang Q, Wang H.},
+  journal = {Research},
+  year    = 2024,
   volume  = 1,
   number  = 1
 }
